--- a/block-BNaabs/new.html
+++ b/block-BNaabs/new.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="/stylesheet/new.css" />
   </head>
   <body>
-    <form action="/form" method="POST">
-      <input type="text" placeholder="Enter your name" />
-      <input type="email" placeholder="Enter your email" />
-      <input type="number" placeholder="Enter your age" />
-      <input type="text" placeholder="Enter your Bio" />
-      <button>Submit Data</button>
+    <form action="/new" method="POST">
+      <input type="text" name="name" placeholder="Enter your name" />
+      <input type="email" name="email" placeholder="Enter your email" />
+      <input type="number" name="age" placeholder="Enter your age" />
+      <input type="text" name="bio" placeholder="Enter your Bio" />
+      <input type="submit" value="Add user" />
     </form>
   </body>
 </html>
